# Monorepo-sample-CI

./: README.md  skaffold.yaml
.github/workflows/: backend.yaml  ci.yaml
backend/: Dockerfile  go.mod  main.go
backend/k8s/: deployment.yaml
testing/: Makefile  pyproject.toml  test_backend.py
