[project]
name = "testing"
version = "0.1.0"
description = ""
authors = [
    {name = "Sawan Y",email = "187062279+Ysawan2@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
